# aidash-cli

./: .gitignore  README.md  pyproject.toml  test_claude_parser.py
aidash/: __init__.py  cli.py  config.py  loader.py  models.py  scoring.py
aidash/parsers/: __init__.py  base.py  claude.py  codex.py  gemini.py
